Bug 361482 - Though the sweeper shows cleaned up, the cleaning wasn't successful
Summary: Though the sweeper shows cleaned up, the cleaning wasn't successful
Status: RESOLVED FIXED
Alias: None
Product: sweeper
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 361483 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-04-07 03:04 UTC by Srinivas
Modified: 2018-02-17 19:01 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Srinivas 2016-04-07 03:04:49 UTC
Starting cleanup...
Clearing Saved Clipboard Contents...
Clearing Recent Documents...
Clearing Run Command History...
Clearing of Run Command History failed: 
Clearing Recent Applications...
Clearing Thumbnail Cache...
Clearing Cookies...
Clearing Favorite Icons...
Clearing Web History...
Clearing Web Cache...
Clearing Form Completion Entries...
Clearing Cookie Policies...
Clean up finished.
But Clean up was not done
Comment 1 Burkhard Lück 2016-04-07 04:18:58 UTC
*** Bug 361483 has been marked as a duplicate of this bug. ***
Comment 2 Burkhard Lück 2016-04-07 04:20:15 UTC
Please add version of  kde / sweeper, thanks
Comment 3 Srinivas 2016-04-07 11:57:36 UTC
Hi!
1) KDE Platform Version is 4.14.18
 2) Th Sweeper version is 1.9
Regards
Srinivas
________________________________________
From: Burkhard Lueck via KDE Bugzilla <bugzilla_noreply@kde.org>
Sent: Thursday, April 7, 2016 9:50 AM
To: srinivas.chandan@live.com
Subject: [sweeper] [Bug 361482] Though the sweeper shows cleaned up, the cleaning wasn't successful

https://bugs.kde.org/show_bug.cgi?id=361482

Burkhard Lueck <lueck@hube-lueck.de> changed:

           What    |Removed                     |Added
----------------------------------------------------------------------------
                 CC|                            |lueck@hube-lueck.de

--- Comment #2 from Burkhard Lueck <lueck@hube-lueck.de> ---
Please add version of  kde / sweeper, thanks

--
You are receiving this mail because:
You reported the bug.
Comment 4 Burkhard Lück 2016-04-08 04:24:50 UTC
$ sweeper --version
Qt: 4.8.6
KDE: 4.14.8
Sweeper: 1.9

The only error message I see here is
Clearing of Run Command History failed
and apparently a lot of data has gone

Which of these items is not cleared for you?
Comment 5 Srinivas 2016-04-11 03:04:18 UTC
Though "sweeper" shows cleanup has finished, the following things have not be cleaned. I also installed "bleachbit" and tried to clean. I have similar issue. The system hasn't been cleaned. Thanks for all your help. 

Saved Clipboard Contents...
Recent Documents...
Run Command History...
Recent Applications...
Thumbnail Cache...
Cookies...
Favorite Icons...
Web History...
Web Cache...
Form Completion Entries...
Cookie Policies...

________________________________________
From: Burkhard Lueck via KDE Bugzilla <bugzilla_noreply@kde.org>
Sent: Friday, April 8, 2016 9:54 AM
To: srinivas.chandan@live.com
Subject: [sweeper] [Bug 361482] Though the sweeper shows cleaned up, the cleaning wasn't successful

https://bugs.kde.org/show_bug.cgi?id=361482

--- Comment #4 from Burkhard Lueck <lueck@hube-lueck.de> ---
$ sweeper --version
Qt: 4.8.6
KDE: 4.14.8
Sweeper: 1.9

The only error message I see here is
Clearing of Run Command History failed
and apparently a lot of data has gone

Which of these items is not cleared for you?

--
You are receiving this mail because:
You reported the bug.
Comment 6 adr.fantini 2017-02-19 12:49:40 UTC
I also have this. Arch, up to date packages, Sweeper 16.12.2-1.
Most of the stuff Sweeper claims to clean is not actually cleaned at all.
Comment 7 Heiko Becker 2017-08-28 17:29:01 UTC
Could you please test with the current master branch (will be release in December as 17.12.0)? It was ported to KF5/Qt5 and paths and DBus interfaces were adjusted in the process.
Comment 8 Heiko Becker 2017-11-26 10:19:32 UTC
Now that 17.11.80 is out, can you please test with that and report back?
Comment 9 adr.fantini 2017-12-29 20:33:37 UTC
I tested again, seems that most of the stuff was cleaned with 17.12.0-1. However, I did not check for everything.
Comment 10 Heiko Becker 2017-12-31 09:58:26 UTC
Ok, thanks for testing.
Comment 11 luca 2018-02-17 15:32:42 UTC
it seems still looking for thumbnails in old kde4 ~/.thumbnails
~/.cache/thumbnails is better
Comment 12 Heiko Becker 2018-02-17 19:01:34 UTC
Git commit 9c9586579f6f0dc7c0db73cf7683e94ab61526d7 by Heiko Becker.
Committed on 17/02/2018 at 18:59.
Pushed by heikobecker into branch 'Applications/17.12'.

Adjust to "new" version of the thumbnail standard

...which respects the XDG Base Directory Specification. This fixes
clearing the thumbnail cache. Also update the links to the two
specs. The old ones weren't available anymore.

M  +5    -5    privacyfunctions.cpp

https://commits.kde.org/sweeper/9c9586579f6f0dc7c0db73cf7683e94ab61526d7