Adjust to "new" version of the thumbnail standard

...which respects the XDG Base Directory Specification. This fixes
clearing the thumbnail cache. Also update the links to the two
specs. The old ones weren't available anymore.

BUG: 361482